[gd_scene load_steps=72 format=2]

[ext_resource path="res://LevelEditor/ObjectsTexture/Goblin.tscn" type="PackedScene" id=1]
[ext_resource path="res://LevelEditor/ObjectsTexture/Mage.tscn" type="PackedScene" id=2]
[ext_resource path="res://LevelEditor/TabContainer.gd" type="Script" id=3]
[ext_resource path="res://LevelEditor/ObjectsTexture/BigTree1.tscn" type="PackedScene" id=4]
[ext_resource path="res://LevelEditor/ScrollContainer.gd" type="Script" id=5]
[ext_resource path="res://LevelEditor/ObjectsTexture/FolliageShadows.tscn" type="PackedScene" id=6]
[ext_resource path="res://LevelEditor/ObjectsTexture/BushAutotile.tscn" type="PackedScene" id=7]
[ext_resource path="res://LevelEditor/ObjectsTexture/Folliage.tscn" type="PackedScene" id=8]
[ext_resource path="res://LevelEditor/ObjectsTexture/GrassPath.tscn" type="PackedScene" id=9]
[ext_resource path="res://LevelEditor/ObjectsTexture/Water.tscn" type="PackedScene" id=10]
[ext_resource path="res://LevelEditor/ObjectsTexture/Fence.tscn" type="PackedScene" id=11]
[ext_resource path="res://LevelEditor/ObjectsTexture/Flowers1.tscn" type="PackedScene" id=12]
[ext_resource path="res://LevelEditor/ObjectsTexture/Mushroom1.tscn" type="PackedScene" id=13]
[ext_resource path="res://LevelEditor/ObjectsTexture/Rock1Autotile.tscn" type="PackedScene" id=14]
[ext_resource path="res://LevelEditor/ObjectsTexture/Flowers3.tscn" type="PackedScene" id=15]
[ext_resource path="res://LevelEditor/ObjectsTexture/Chest.tscn" type="PackedScene" id=16]
[ext_resource path="res://LevelEditor/ObjectsTexture/Sign.tscn" type="PackedScene" id=17]
[ext_resource path="res://Others/Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://LevelEditor/ObjectsTexture/Torch.tscn" type="PackedScene" id=19]
[ext_resource path="res://LevelEditor/ObjectsTexture/Grass.tscn" type="PackedScene" id=20]
[ext_resource path="res://LevelEditor/ObjectsTexture/Fox.tscn" type="PackedScene" id=21]
[ext_resource path="res://LevelEditor/ObjectsTexture/Chameleon.tscn" type="PackedScene" id=22]
[ext_resource path="res://LevelEditor/ObjectsTexture/Falcon.tscn" type="PackedScene" id=23]
[ext_resource path="res://LevelEditor/ObjectsTexture/Cat.tscn" type="PackedScene" id=24]
[ext_resource path="res://LevelEditor/ObjectsTexture/Checkpoint.tscn" type="PackedScene" id=25]
[ext_resource path="res://LevelEditor/ObjectsTexture/Mushroom2.tscn" type="PackedScene" id=26]
[ext_resource path="res://LevelEditor/ObjectsTexture/Leaves1.tscn" type="PackedScene" id=27]
[ext_resource path="res://LevelEditor/ObjectsTexture/Mushroom3.tscn" type="PackedScene" id=28]
[ext_resource path="res://LevelEditor/ObjectsTexture/Leaves 2.tscn" type="PackedScene" id=29]
[ext_resource path="res://LevelEditor/ObjectsTexture/Flowers2.tscn" type="PackedScene" id=30]
[ext_resource path="res://LevelEditor/ObjectsTexture/Flowers4.tscn" type="PackedScene" id=31]
[ext_resource path="res://LevelEditor/ObjectsTexture/Leaves3.tscn" type="PackedScene" id=32]
[ext_resource path="res://LevelEditor/ObjectsTexture/Mushroom4.tscn" type="PackedScene" id=33]
[ext_resource path="res://LevelEditor/ObjectsTexture/Rock2Autotile.tscn" type="PackedScene" id=34]
[ext_resource path="res://LevelEditor/ObjectsTexture/Leaves4.tscn" type="PackedScene" id=35]
[ext_resource path="res://LevelEditor/ObjectsTexture/Rock3Autotile.tscn" type="PackedScene" id=36]
[ext_resource path="res://LevelEditor/ObjectsTexture/Rock4Autotile.tscn" type="PackedScene" id=37]
[ext_resource path="res://LevelEditor/ObjectsTexture/Mud1.tscn" type="PackedScene" id=38]
[ext_resource path="res://LevelEditor/ObjectsTexture/Mud2.tscn" type="PackedScene" id=39]
[ext_resource path="res://LevelEditor/ObjectsTexture/Mud3.tscn" type="PackedScene" id=40]
[ext_resource path="res://LevelEditor/ObjectsTexture/Mud4.tscn" type="PackedScene" id=41]
[ext_resource path="res://LevelEditor/ObjectsTexture/Skeleton.tscn" type="PackedScene" id=42]
[ext_resource path="res://LevelEditor/ObjectsTexture/Tree1.tscn" type="PackedScene" id=43]
[ext_resource path="res://LevelEditor/ObjectsTexture/Tree2.tscn" type="PackedScene" id=44]
[ext_resource path="res://LevelEditor/ObjectsTexture/BigBarrel.tscn" type="PackedScene" id=45]
[ext_resource path="res://LevelEditor/ObjectsTexture/ClayJar.tscn" type="PackedScene" id=46]
[ext_resource path="res://LevelEditor/ObjectsTexture/Hole.tscn" type="PackedScene" id=47]
[ext_resource path="res://LevelEditor/ObjectsTexture/WoodenBox2.tscn" type="PackedScene" id=48]
[ext_resource path="res://LevelEditor/ObjectsTexture/WoodenBox.tscn" type="PackedScene" id=49]
[ext_resource path="res://LevelEditor/ObjectsTexture/SmallBarrel.tscn" type="PackedScene" id=50]
[ext_resource path="res://LevelEditor/ObjectsTexture/Tombstone.tscn" type="PackedScene" id=51]
[ext_resource path="res://LevelEditor/ObjectsTexture/Skull2.tscn" type="PackedScene" id=52]
[ext_resource path="res://LevelEditor/ObjectsTexture/ParkBench.tscn" type="PackedScene" id=53]
[ext_resource path="res://LevelEditor/ObjectsTexture/Skull.tscn" type="PackedScene" id=54]
[ext_resource path="res://LevelEditor/ObjectsTexture/BigRock2.tscn" type="PackedScene" id=55]
[ext_resource path="res://LevelEditor/ObjectsTexture/BigRock3.tscn" type="PackedScene" id=56]
[ext_resource path="res://LevelEditor/ObjectsTexture/BigRock1.tscn" type="PackedScene" id=57]
[ext_resource path="res://LevelEditor/ObjectsTexture/Hills.tscn" type="PackedScene" id=58]
[ext_resource path="res://LevelEditor/ObjectsTexture/WaterRock3.tscn" type="PackedScene" id=59]
[ext_resource path="res://LevelEditor/ObjectsTexture/WaterLily3.tscn" type="PackedScene" id=60]
[ext_resource path="res://LevelEditor/ObjectsTexture/WaterRock4.tscn" type="PackedScene" id=61]
[ext_resource path="res://LevelEditor/ObjectsTexture/WaterLily4.tscn" type="PackedScene" id=62]
[ext_resource path="res://LevelEditor/ObjectsTexture/WaterLily5.tscn" type="PackedScene" id=63]
[ext_resource path="res://LevelEditor/ObjectsTexture/WaterRock5.tscn" type="PackedScene" id=64]
[ext_resource path="res://LevelEditor/ObjectsTexture/WaterRock6.tscn" type="PackedScene" id=65]
[ext_resource path="res://LevelEditor/ObjectsTexture/WaterLily1.tscn" type="PackedScene" id=66]
[ext_resource path="res://LevelEditor/ObjectsTexture/WaterLily2.tscn" type="PackedScene" id=67]
[ext_resource path="res://LevelEditor/ObjectsTexture/WaterRock1.tscn" type="PackedScene" id=68]
[ext_resource path="res://LevelEditor/ObjectsTexture/WaterRock2.tscn" type="PackedScene" id=69]
[ext_resource path="res://LevelEditor/ObjectsTexture/WaterLily6.tscn" type="PackedScene" id=70]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 18 )

[node name="ObjectsSelect" type="CanvasLayer"]

[node name="TabContainer" type="TabContainer" parent="."]
margin_top = 216.0
margin_right = 710.0
margin_bottom = 346.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 1 )
tab_align = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemies" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 33.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Enemies"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Enemies/ScrollContainer"]
margin_right = 106.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Enemies/ScrollContainer/VBoxContainer"]
margin_right = 106.0
margin_bottom = 32.0

[node name="Goblin" parent="TabContainer/Enemies/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 32.0
margin_bottom = 32.0

[node name="Mage" parent="TabContainer/Enemies/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 36.0
margin_right = 70.0
margin_bottom = 32.0

[node name="Skeleton" parent="TabContainer/Enemies/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 42 )]
margin_left = 74.0
margin_right = 106.0
margin_bottom = 32.0

[node name="Prefabs" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 33.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Prefabs"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Prefabs/ScrollContainer"]
margin_right = 612.0
margin_bottom = 96.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer"]
margin_right = 612.0
margin_bottom = 96.0

[node name="BigTree1" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]

[node name="Tree1" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 43 )]
margin_left = 52.0
margin_right = 100.0

[node name="Tree2" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 44 )]
margin_left = 104.0
margin_right = 152.0

[node name="Chest" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 16 )]
margin_left = 156.0
margin_right = 180.0
margin_bottom = 96.0

[node name="Sign" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 17 )]
margin_left = 184.0
margin_right = 208.0
margin_bottom = 96.0

[node name="Torch" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 19 )]
margin_left = 212.0
margin_right = 236.0
margin_bottom = 96.0

[node name="Checkpoint" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 25 )]
margin_left = 240.0
margin_right = 336.0
margin_bottom = 96.0

[node name="BigBarrel" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 45 )]
margin_left = 340.0
margin_right = 356.0
margin_bottom = 96.0

[node name="ClayJar" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 46 )]
margin_left = 360.0
margin_right = 376.0
margin_bottom = 96.0

[node name="Hole" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 47 )]
margin_left = 380.0
margin_right = 396.0
margin_bottom = 96.0

[node name="ParkBenck" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 53 )]
margin_left = 400.0
margin_right = 432.0
margin_bottom = 96.0

[node name="Skull2" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 52 )]
margin_left = 436.0
margin_right = 452.0
margin_bottom = 96.0

[node name="Skull" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 54 )]
margin_left = 456.0
margin_right = 472.0
margin_bottom = 96.0

[node name="SmallBarrel" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 50 )]
margin_left = 476.0
margin_right = 492.0
margin_bottom = 96.0

[node name="Tombstone" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 51 )]
margin_left = 496.0
margin_right = 512.0
margin_bottom = 96.0

[node name="WoodenBox2" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 48 )]
margin_left = 516.0
margin_right = 532.0
margin_bottom = 96.0

[node name="WoodenBox" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 49 )]
margin_left = 536.0
margin_right = 552.0
margin_bottom = 96.0

[node name="BigRock1" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 57 )]
margin_left = 556.0
margin_right = 572.0
margin_bottom = 96.0

[node name="BigRock2" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 55 )]
margin_left = 576.0
margin_right = 592.0
margin_bottom = 96.0

[node name="BigRock3" parent="TabContainer/Prefabs/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 56 )]
margin_left = 596.0
margin_right = 612.0
margin_bottom = 96.0

[node name="Tilesets" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 33.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Tilesets"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Tilesets/ScrollContainer"]
margin_right = 160.0
margin_bottom = 24.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Tilesets/ScrollContainer/VBoxContainer"]
margin_right = 140.0
margin_bottom = 24.0

[node name="Grass" parent="TabContainer/Tilesets/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 20 )]
margin_bottom = 24.0

[node name="GrassPath" parent="TabContainer/Tilesets/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 24.0

[node name="Water" parent="TabContainer/Tilesets/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 10 )]

[node name="Bush" parent="TabContainer/Tilesets/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 60.0
margin_right = 84.0

[node name="Folliage" parent="TabContainer/Tilesets/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 88.0
margin_right = 112.0

[node name="FolliageShadows" parent="TabContainer/Tilesets/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 116.0
margin_right = 140.0

[node name="Hills" parent="TabContainer/Tilesets/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 58 )]

[node name="Buildings" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 33.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Buildings"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Buildings/ScrollContainer"]
margin_right = 16.0
margin_bottom = 16.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Buildings/ScrollContainer/VBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0

[node name="Fence" parent="TabContainer/Buildings/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 11 )]

[node name="Decoration" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 33.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Decoration"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Decoration/ScrollContainer"]
margin_right = 396.0
margin_bottom = 16.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer"]
margin_right = 396.0
margin_bottom = 16.0

[node name="Flowers" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 12 )]

[node name="Flowers2" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 30 )]
margin_left = 20.0
margin_right = 36.0

[node name="Flowers3" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 15 )]
margin_left = 40.0
margin_right = 56.0

[node name="Flowers4" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 31 )]
margin_left = 60.0
margin_right = 76.0

[node name="Grass" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 27 )]
margin_left = 80.0
margin_right = 96.0

[node name="Grass2" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 32 )]
margin_left = 100.0
margin_right = 116.0

[node name="Grass3" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 35 )]
margin_left = 120.0
margin_right = 136.0

[node name="Grass4" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 29 )]
margin_left = 140.0
margin_right = 156.0

[node name="Mushrooms" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 13 )]
margin_left = 160.0
margin_right = 176.0

[node name="Mushrooms2" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 26 )]
margin_left = 180.0
margin_right = 196.0

[node name="Mushrooms3" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 28 )]
margin_left = 200.0
margin_right = 216.0

[node name="Mushrooms4" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 33 )]
margin_left = 220.0
margin_right = 236.0

[node name="Rocks1" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 14 )]
margin_left = 240.0
margin_right = 256.0

[node name="Rocks2" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 34 )]
margin_left = 260.0
margin_right = 276.0

[node name="Rocks3" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 36 )]
margin_left = 280.0
margin_right = 296.0

[node name="Rocks4" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 37 )]
margin_left = 300.0
margin_right = 316.0

[node name="Mud1" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 38 )]
margin_left = 320.0
margin_right = 336.0

[node name="Mud2" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 39 )]
margin_left = 340.0
margin_right = 356.0

[node name="Mud3" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 40 )]
margin_left = 360.0
margin_right = 376.0

[node name="Mud4" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 41 )]
margin_left = 380.0
margin_right = 396.0

[node name="WaterLily1" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 66 )]

[node name="WaterLily2" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 67 )]

[node name="WaterLily3" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 60 )]

[node name="WaterLily4" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 62 )]

[node name="WaterLily5" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 63 )]

[node name="WaterLily6" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 70 )]

[node name="WaterRock1" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 68 )]

[node name="WaterRock2" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 69 )]

[node name="WaterRock3" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 59 )]

[node name="WaterRock4" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 61 )]

[node name="WaterRock5" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 64 )]

[node name="WaterRock6" parent="TabContainer/Decoration/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 65 )]

[node name="Pets" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 33.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Pets"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Pets/ScrollContainer"]
margin_right = 140.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Pets/ScrollContainer/VBoxContainer"]
margin_right = 140.0
margin_bottom = 32.0

[node name="Fox" parent="TabContainer/Pets/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 21 )]
margin_right = 32.0
margin_bottom = 32.0

[node name="Cat" parent="TabContainer/Pets/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 24 )]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0

[node name="Chameleon" parent="TabContainer/Pets/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 22 )]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0

[node name="Falcon" parent="TabContainer/Pets/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 23 )]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0

[node name="Exit" type="Button" parent="."]
anchor_left = 0.928
anchor_top = 0.006
anchor_right = 1.0
anchor_bottom = 0.069
margin_left = -0.104004
margin_top = 0.0799999
margin_bottom = -0.0800018
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="TabContainer" to="TabContainer" method="_on_TabContainer_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer" to="TabContainer" method="_on_TabContainer_mouse_exited"]
[connection signal="pressed" from="Exit" to="TabContainer" method="_on_Exit_pressed"]
